# git-analyze

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commit_occurrence.rs  git.rs  grouped_by_date.rs  lib.rs  mailmap.rs  main.rs
src/cli/: errors.rs  flags.rs  unix.rs
