[package]
name = "git-analyze"
version = "0.1.0"
authors = ["Josh Clayton <joshua.clayton@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
git2 = "0.13.25"
structopt = "0.3"
chrono = "0.4"
date-calculations = "0.1"
itertools = "0.10"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
